Improve REST API v2 correctness